# ECG-Language-Models

./: .gitmodules  README.md  pyproject.toml
docs/: training_configs_8xh100.md
scripts/: count_dataset_tokens.py  elf_rl.sh  erb_minimal.py  eval.sh  eval_ecg_reasoning.sh  openrouter_eval.py  run.sh  run_ecg_reasoning_bench.py  run_erb.sh  run_tests.sh  st_mem_full_training.sh  train.sh  train2.sh
src/: main_analyze_results.py  main_chat.py  main_evaluator.py  main_trainer.py
src/configs/: config.py  constants.py
src/dataloaders/: build_dataloader.py  dataset_mixer.py
src/dataloaders/data_representation/: base.py  rgb.py  signal.py  stacked_signal.py  symbolic.py
src/dataloaders/system_prompts/: system_prompt_rl_think.txt  system_prompt_think.txt
src/elm/: train.py
src/elm/config/: load.py
src/elm/config/experiment/: run_multi_pretrain.yaml  run_single_pretrain.yaml  run_test.yaml
src/elm/config/gpu/: distributed.yaml  single.yaml
src/elm/config/model/: qwen3.5-0.8b-base_siglip-ecg.yaml
src/elm/config/training/: args.py  pretrain.yaml
src/elm/utils/: logging.py  parallelism.py  parallelism_protection.py  seed.py
src/elms/: build_elm.py  build_encoder.py  build_llm.py  connect_nns.py
src/elms/connectors/: cnn_patch_proj.py  mlp_proj.py  patch_proj.py
src/elms/ecg_encoders/merl/: merl.py
src/elms/ecg_encoders/mlp_mix/: mlp_mix.py
src/elms/ecg_encoders/st_mem/: st_mem.py
src/elms/llm_encoders/: base_elf.py  llava.py
src/elms/llms/: _wrap.py  hf_llm.py
src/elms/llms/gemma2/: gemma2.py
src/optimizers/: muon_distributed.py  optimizer_setup.py
src/rl/: losses.py  rewards.py  rl_loss.py  rollout.py
src/rl/sapo/: sapo_loss.py
src/runners/: evaluator.py  rl_trainer.py  trainer.py  validator.py
src/utils/: chat_template_manager.py  checkpoint_manager.py  dir_file_manager.py  gpu_manager.py  inference_manager.py  parallel_context.py  wandb_manager.py
tests/: test_rl_rewards.py  test_transformers.py
(+13 files in other folders)
