[project]
name = "ecg-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flash-linear-attention[cuda, tilelang]==0.5.1",
    "apache-tvm-ffi<=0.1.11",
    "datasets>=4.4.2",
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "maturin>=1.11.5",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=5.13.0",
    "wandb>=0.24.0",
    "wfdb>=4.3.0",
    "ninja",
    "packaging",
    "psutil",
    "setuptools",
    "wheel",
    "accelerate",
    "peft>=0.19.1",
    "torchvision>=0.25.0",
    "einops>=0.8.2",
    "jinja2>=3.1.6",
    "nltk>=3.9.4",
    "rouge-score>=0.1.2",
    "google>=3.0.0",
    "tenacity>=9.1.4",
    "ecg-plot>=0.2.8",
    "google-genai>=1.73.1",
    "openai>=2.32.0",
    "huggingface-hub>=1.19.0",
]

[tool.ruff.lint]
select = ["ALL"]
